# requests-system-certs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  pyproject.toml  tox.toml
.github/workflows/: check.yaml
scripts/: release.py
src/: requests_system_certs_patch.pth
src/requests_system_certs/: __init__.py
tests/: __init__.py  test_requests_system_certs.py
