[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs>=0.4",
  "hatchling>=1.27",
]

[project]
name = "requests-system-certs"
description = "Patch Requests to use system CA certificates"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
maintainers = [
  { name = "Léo Bernard", email = "leodevian.gh@gmail.com" },
]
authors = [
  { name = "Léo Bernard", email = "leodevian.gh@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Internet :: WWW/HTTP",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "requests>=2.32.3",
]
urls.changelog = "https://github.com/leodevian/requests-system-certs/blob/main/CHANGELOG.md"
urls.homepage = "https://github.com/leodevian/requests-system-certs"
urls.issues = "https://github.com/leodevian/requests-system-certs/issues"
urls.repository = "https://github.com/leodevian/requests-system-certs"

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "release" },
  { include-group = "tests" },
  { include-group = "type" },
]
type = [
  "mypy>=1.13",
  "types-requests>=2.32.0.20250301",
]
lint = [
  "pre-commit-uv>=4.1.4",
]
docstrings = [
  "interrogate>=1.7",
]
coverage = [
  "covdefaults>=2.3",
  "coverage[toml]>=7.6.8",
]
tests = [
  "pytest>=8.3.4",
  { include-group = "coverage" },
]
pkg = [
  "check-wheel-contents>=0.6.1",
  "twine>=6.0.1",
  "uv>=0.5.6",
]
release = [
  "packaging>=24.2",
  "towncrier>=24.8",
]

[tool.hatch]
build.dev-mod-dirs = [ "src" ]
build.hooks.vcs.version-file = "src/requests_system_certs/VERSION.txt"
build.targets.wheel.only-include = [ "src" ]
build.targets.wheel.sources = [ "src" ]
version.source = "vcs"

[tool.ruff]
lint.select = [ "ALL" ]
lint.ignore = [ "ANN401", "COM812", "FBT", "ISC001" ]
lint.per-file-ignores."scripts/**" = [
  "INP001",
]
lint.per-file-ignores."scripts/release.py" = [
  "S603",
  "S607",
]
lint.per-file-ignores."tests/**" = [
  "ARG",
  "D",
  "S101",
]
lint.pydocstyle.convention = "google"

[tool.codespell]
write-changes = true
ignore-words-list = [ "socio-economic" ]

[tool.pyproject-fmt]
max_supported_version = "3.13"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "-ra",
  "--showlocals",
  "--strict-config",
  "--strict-markers",
]
filterwarnings = [ "error" ]
log_level = "info"
testpaths = [ "tests" ]
xfail_strict = true

[tool.coverage]
html.show_contexts = true
paths.source = [
  "src",
  ".tox/**/site-packages",
]
run.parallel = true
run.plugins = [
  "covdefaults",
]

[tool.towncrier]
name = "requests-system-certs"
filename = "CHANGELOG.md"
directory = "changelog.d"
issue_format = "[#{issue}](https://github.com/leodevian/requests-system-certs/{issue})"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[tool.mypy]
python_version = "3.9"
warn_unreachable = true
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
pretty = true

[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-setters = false
exclude = [  ]
fail-under = 100
verbose = 0
quiet = false
whitelist-regex = [  ]
color = true
